--- a/index.html
+++ b/index.html
@@ -2,146 +2,136 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>تحويل آمن</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Bank Symbol with Falling Currencies</title>
   <style>
     body {
       margin: 0;
+      padding: 0;
       background-color: black;
       overflow: hidden;
       font-family: Arial, sans-serif;
-      text-align: center;
     }
 
     .rainbow-text {
-      font-size: 38px;
+      font-size: 24px;
       font-weight: bold;
+      text-align: center;
+      margin: 20px 10px;
       animation: rainbow 5s linear infinite;
-      margin-top: 40px;
+      color: white;
     }
 
     @keyframes rainbow {
-      0%{color:red;}
-      14%{color:orange;}
-      28%{color:yellow;}
-      42%{color:green;}
-      57%{color:blue;}
-      71%{color:indigo;}
-      85%{color:violet;}
-      100%{color:red;}
+      0% { color: red; }
+      14% { color: orange; }
+      28% { color: yellow; }
+      42% { color: green; }
+      56% { color: blue; }
+      70% { color: indigo; }
+      84% { color: violet; }
+      100% { color: red; }
     }
 
-    .money {
+    .image-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 10px;
+    }
+
+    .image-container img {
+      max-width: 90%;
+      height: auto;
+    }
+
+    .floating-text {
       position: absolute;
-      font-size: 32px;
-      animation: fall linear infinite;
-      color: white;
-    }
-
-    @keyframes fall {
-      0% {top: -50px;}
-      100% {top: 100vh;}
-    }
-
-    .bank-icon {
-      font-size: 140px;
-      color: white;
-      margin-top: 60px;
-    }
-
-    .referral-button {
-      font-size: 28px;
-      padding: 15px 30px;
-      border: none;
-      border-radius: 10px;
-      cursor: pointer;
-      background: linear-gradient(to right, red, orange, yellow, green, blue, indigo, violet);
-      color: black;
+      bottom: 60px;
+      width: 100%;
+      text-align: center;
+      font-size: 20px;
       font-weight: bold;
-      margin-top: 80px;
-      animation: rainbow 7s linear infinite;
+      color: white;
+      padding: 10px;
+      background: rgba(0, 0, 0, 0.6);
+    }
+
+    @media (max-width: 768px) {
+      .rainbow-text {
+        font-size: 18px;
+      }
+
+      .floating-text {
+        font-size: 16px;
+      }
     }
   </style>
 </head>
 <body>
 
-  <div id="title" class="rainbow-text">حوّل مبالغك بأمان</div>
-  <div class="bank-icon">🏦</div>
+  <div class="rainbow-text" id="rainbowText">حول مبالغك بأمان</div>
 
-  <a id="referralLink" href="https://remit.ly/e2yp0xkz" target="_blank">
-    <div id="referralText" class="referral-button">احصل على تحويلك الآن</div>
-  </a>
+  <div class="image-container">
+    <img src="https://oaidalleapiprodscus.blob.core.windows.net/private/org-GShpx9tnNYpHYO2fWJolS3uB/user-K33DUul8FZcvZQ8kUeCg0RV6/img-gTiSgTEET5tpTE9B92jrz0pG.png?st=2025-07-23T21%3A34%3A25Z&se=2025-07-23T23%3A34%3A25Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=1ee9df88-2901-4eb1-99f2-f4e63ffb899b&sktid=c37c318d-98d4-4d9f-bc6b-4e8eb1939384&skt=2024-07-22T01%3A10%3A20Z&ske=2024-07-23T01%3A10%3A20Z&sks=b&skv=2021-08-06&sig=ZHVgVGsE93miQdd0vlV6%2FZy7Mxg6syQ8R38Q1b6V%2F%2Fk%3D" alt="Bank Symbol">
+  </div>
+
+  <div class="floating-text" id="affiliateText">
+    <a href="https://remit.ly/e2yp0xkz" target="_blank" style="color: white; text-decoration: none;">حول أموالك عبر Remitly بعمولة منخفضة</a>
+  </div>
 
   <script>
-    // تغيير اللغات للجملة الرئيسية
-    const phrases = [
-      "حوّل مبالغك بأمان",
-      "Send money safely",
-      "Envoyez de l'argent en toute sécurité",
-      "Envía dinero con seguridad",
-      "Geld sicher senden",
-      "Manda soldi in sicurezza",
-      "安全に送金する",
-      "أرسل الأموال بأمان",
-      "Send dine penge sikkert",
-      "Trimitere bani în siguranță",
-      "Bezit de güvenle para gönderin",
-      "Переказ грошей безпечно",
-      "Отправляйте деньги безопасно",
-      "Furkan amani kwa usalama",
-      "Bħala trasferiment sigur ta' flus",
-      "गोपनीय रूप से पैसे भेजें",
-      "돈을 안전하게 보내기",
-      "Kupeleka fedha salama",
+    const languages = [
+      "حول مبالغك بأمان", // عربي
+      "Send money securely", // إنجليزي
+      "Envoyez de l'argent en toute sécurité", // فرنسي
+      "Envía dinero de forma segura", // إسباني
+      "Geld sicher überweisen", // ألماني
+      "Invia denaro in modo sicuro", // إيطالي
+      "Wyślij pieniądze bezpiecznie", // بولندي
+      "Geld veilig verzenden", // هولندي
+      "Отправляйте деньги безопасно", // روسي
+      "安全に送金する", // ياباني
+      "Sicher Geld senden", // ألماني
+      "송금은 안전하게", // كوري
+      "Envie dinheiro com segurança", // برتغالي
+      "Skicka pengar säkert", // سويدي
+      "Sigurno pošaljite novac", // صربي/كرواتي
     ];
-    let titleIndex = 0;
-    setInterval(() => {
-      document.getElementById("title").textContent = phrases[titleIndex];
-      titleIndex = (titleIndex + 1) % phrases.length;
-    }, 5000);
 
-    // تغيير النص على رابط الإحالة
-    const referralPhrases = [
-      "احصل على تحويلك الآن",
-      "Get your transfer now",
-      "Obtenez votre transfert maintenant",
-      "Obtén tu transferencia ahora",
-      "Erhalten Sie Ihre Überweisung jetzt",
-      "Ottieni il tuo trasferimento ora",
-      "今すぐ送金を受け取る",
-      "الحصول على الحوالة الآن",
-      "Få din overførsel nu",
-      "Primește-ți transferul acum",
-      "Şimdi transferinizi alın",
-      "Отримати свій переказ",
-      "Получите перевод сейчас",
-      "Pata uhamisho wako sasa",
-      "Ikseb it-trasferiment tiegħek issa",
-      "अपना ट्रांसफर अभी प्राप्त करें",
-      "지금 송금 받기",
-      "Pokea uhamisho wako sasa",
+    const affiliatePhrases = [
+      "حول أموالك عبر Remitly بعمولة منخفضة", 
+      "Transfer your money safely via Remitly", 
+      "Transférez votre argent en toute sécurité via Remitly", 
+      "Transfiere tu dinero con seguridad con Remitly",
+      "Überweise dein Geld sicher mit Remitly",
+      "Invia denaro con Remitly in sicurezza",
+      "Przelej pieniądze bezpiecznie przez Remitly",
+      "Verstuur geld veilig met Remitly",
+      "Отправьте деньги безопасно через Remitly",
+      "Remitlyで安全に送金", 
+      "송금은 Remitly와 함께 안전하게", 
+      "Envie dinheiro com segurança com a Remitly",
+      "Skicka pengar tryggt med Remitly",
+      "Pošaljite novac sigurno putem Remitly"
     ];
-    let referralIndex = 0;
+
+    let index = 0;
+    let affiliateIndex = 0;
+
     setInterval(() => {
-      document.getElementById("referralText").textContent = referralPhrases[referralIndex];
-      referralIndex = (referralIndex + 1) % referralPhrases.length;
-    }, 6500);
+      index = (index + 1) % languages.length;
+      document.getElementById('rainbowText').textContent = languages[index];
+    }, 7000); // كل 7 ثواني
 
-    // إنشاء رموز العملات تتساقط
-    const moneySymbols = ['💵', '💶', '💷', '💴', '💸', '🪙', '🪙', '💰', '💳'];
-    function createMoney() {
-      const money = document.createElement('div');
-      money.classList.add('money');
-      money.style.left = Math.random() * 100 + 'vw';
-      money.style.animationDuration = (Math.random() * 3 + 3) + 's';
-      money.textContent = moneySymbols[Math.floor(Math.random() * moneySymbols.length)];
-      document.body.appendChild(money);
-
-      setTimeout(() => {
-        money.remove();
-      }, 7000);
-    }
-    setInterval(createMoney, 300);
+    setInterval(() => {
+      affiliateIndex = (affiliateIndex + 1) % affiliatePhrases.length;
+      document.getElementById('affiliateText').innerHTML = `
+        <a href="https://remit.ly/e2yp0xkz" target="_blank" style="color: white; text-decoration: none;">
+          ${affiliatePhrases[affiliateIndex]}
+        </a>
+      `;
+    }, 7000); // كل 7 ثواني
   </script>
-
 </body>
 </html>
