--- a/index.html
+++ b/index.html
@@ -1,142 +1,147 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
   <title>تحويل آمن</title>
   <style>
     body {
       margin: 0;
-      padding: 0;
-      background: black;
-      color: white;
-      font-family: Arial, sans-serif;
+      background-color: black;
       overflow: hidden;
-    }
-
-    .background {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAA...') no-repeat center center;
-      background-size: contain;
-      z-index: 0;
-      opacity: 0.2;
-    }
-
-    .title {
-      position: absolute;
-      top: 10%;
-      width: 100%;
+      font-family: Arial, sans-serif;
       text-align: center;
-      font-size: 6vw;
+    }
+
+    .rainbow-text {
+      font-size: 38px;
       font-weight: bold;
-      background: linear-gradient(45deg, red, orange, yellow, green, blue, indigo, violet);
-      -webkit-background-clip: text;
-      color: transparent;
-      animation: rainbow 10s linear infinite;
-      z-index: 1;
+      animation: rainbow 5s linear infinite;
+      margin-top: 40px;
     }
 
     @keyframes rainbow {
-      0% { filter: hue-rotate(0deg); }
-      100% { filter: hue-rotate(360deg); }
+      0%{color:red;}
+      14%{color:orange;}
+      28%{color:yellow;}
+      42%{color:green;}
+      57%{color:blue;}
+      71%{color:indigo;}
+      85%{color:violet;}
+      100%{color:red;}
     }
 
-    .falling-money {
+    .money {
       position: absolute;
-      top: -10%;
-      font-size: 3vw;
-      animation: fall 10s linear infinite;
-      z-index: 1;
+      font-size: 32px;
+      animation: fall linear infinite;
+      color: white;
     }
 
     @keyframes fall {
-      0% {
-        transform: translateY(-100vh) translateX(0);
-        opacity: 1;
-      }
-      100% {
-        transform: translateY(120vh) translateX(50px);
-        opacity: 0;
-      }
+      0% {top: -50px;}
+      100% {top: 100vh;}
     }
 
-    .link-box {
-      position: absolute;
-      bottom: 10%;
-      width: 90%;
-      left: 5%;
-      background: rgba(255, 255, 255, 0.1);
-      padding: 15px;
+    .bank-icon {
+      font-size: 140px;
+      color: white;
+      margin-top: 60px;
+    }
+
+    .referral-button {
+      font-size: 28px;
+      padding: 15px 30px;
+      border: none;
       border-radius: 10px;
-      text-align: center;
-      font-size: 5vw;
-      z-index: 2;
-      color: #00ffcc;
-    }
-
-    a {
-      color: #00ffff;
-      text-decoration: none;
+      cursor: pointer;
+      background: linear-gradient(to right, red, orange, yellow, green, blue, indigo, violet);
+      color: black;
       font-weight: bold;
-    }
-
-    @media (max-width: 600px) {
-      .title {
-        font-size: 7vw;
-      }
-
-      .falling-money {
-        font-size: 5vw;
-      }
-
-      .link-box {
-        font-size: 6vw;
-      }
+      margin-top: 80px;
+      animation: rainbow 7s linear infinite;
     }
   </style>
 </head>
 <body>
-  <div class="background"></div>
 
-  <div class="title" id="titleText">حول أموالك بأمان</div>
+  <div id="title" class="rainbow-text">حوّل مبالغك بأمان</div>
+  <div class="bank-icon">🏦</div>
 
-  <div class="falling-money" style="left:10%">💵</div>
-  <div class="falling-money" style="left:30%">💶</div>
-  <div class="falling-money" style="left:50%">💴</div>
-  <div class="falling-money" style="left:70%">💷</div>
-  <div class="falling-money" style="left:90%">💳</div>
-
-  <div class="link-box" id="linkBox">
-    <a href="https://remit.ly/e2yp0xkz" id="linkText">https://remit.ly/e2yp0xkz</a>
-  </div>
+  <a id="referralLink" href="https://remit.ly/e2yp0xkz" target="_blank">
+    <div id="referralText" class="referral-button">احصل على تحويلك الآن</div>
+  </a>
 
   <script>
-    const titles = [
-      "حول أموالك بأمان", "Transfer Your Money Safely", "Transférez votre argent en toute sécurité",
-      "Envía tu dinero con seguridad", "Geld sicher überweisen", "Invia i tuoi soldi in sicurezza",
-      "安全に送金する", "Переводите деньги безопасно", "Envoie larjan ou byen sekirite",
-      "تحويل الأموال بأمان", "Sikker pengeoverførsel", "Sigurni prijenos novca", "امن ترسیل کریں",
-      "Pieniądze bezpiecznie", "Mengirim uang dengan aman"
+    // تغيير اللغات للجملة الرئيسية
+    const phrases = [
+      "حوّل مبالغك بأمان",
+      "Send money safely",
+      "Envoyez de l'argent en toute sécurité",
+      "Envía dinero con seguridad",
+      "Geld sicher senden",
+      "Manda soldi in sicurezza",
+      "安全に送金する",
+      "أرسل الأموال بأمان",
+      "Send dine penge sikkert",
+      "Trimitere bani în siguranță",
+      "Bezit de güvenle para gönderin",
+      "Переказ грошей безпечно",
+      "Отправляйте деньги безопасно",
+      "Furkan amani kwa usalama",
+      "Bħala trasferiment sigur ta' flus",
+      "गोपनीय रूप से पैसे भेजें",
+      "돈을 안전하게 보내기",
+      "Kupeleka fedha salama",
     ];
-
-    const links = [
-      "https://remit.ly/e2yp0xkz", "https://remit.ly/e2yp0xkz", "https://remit.ly/e2yp0xkz",
-      "https://remit.ly/e2yp0xkz", "https://remit.ly/e2yp0xkz", "https://remit.ly/e2yp0xkz",
-      "https://remit.ly/e2yp0xkz", "https://remit.ly/e2yp0xkz", "https://remit.ly/e2yp0xkz",
-      "https://remit.ly/e2yp0xkz", "https://remit.ly/e2yp0xkz", "https://remit.ly/e2yp0xkz",
-      "https://remit.ly/e2yp0xkz", "https://remit.ly/e2yp0xkz", "https://remit.ly/e2yp0xkz"
-    ];
-
-    let i = 0;
+    let titleIndex = 0;
     setInterval(() => {
-      document.getElementById('titleText').textContent = titles[i];
-      document.getElementById('linkText').textContent = links[i];
-      i = (i + 1) % titles.length;
-    }, 6000);
+      document.getElementById("title").textContent = phrases[titleIndex];
+      titleIndex = (titleIndex + 1) % phrases.length;
+    }, 5000);
+
+    // تغيير النص على رابط الإحالة
+    const referralPhrases = [
+      "احصل على تحويلك الآن",
+      "Get your transfer now",
+      "Obtenez votre transfert maintenant",
+      "Obtén tu transferencia ahora",
+      "Erhalten Sie Ihre Überweisung jetzt",
+      "Ottieni il tuo trasferimento ora",
+      "今すぐ送金を受け取る",
+      "الحصول على الحوالة الآن",
+      "Få din overførsel nu",
+      "Primește-ți transferul acum",
+      "Şimdi transferinizi alın",
+      "Отримати свій переказ",
+      "Получите перевод сейчас",
+      "Pata uhamisho wako sasa",
+      "Ikseb it-trasferiment tiegħek issa",
+      "अपना ट्रांसफर अभी प्राप्त करें",
+      "지금 송금 받기",
+      "Pokea uhamisho wako sasa",
+    ];
+    let referralIndex = 0;
+    setInterval(() => {
+      document.getElementById("referralText").textContent = referralPhrases[referralIndex];
+      referralIndex = (referralIndex + 1) % referralPhrases.length;
+    }, 6500);
+
+    // إنشاء رموز العملات تتساقط
+    const moneySymbols = ['💵', '💶', '💷', '💴', '💸', '🪙', '🪙', '💰', '💳'];
+    function createMoney() {
+      const money = document.createElement('div');
+      money.classList.add('money');
+      money.style.left = Math.random() * 100 + 'vw';
+      money.style.animationDuration = (Math.random() * 3 + 3) + 's';
+      money.textContent = moneySymbols[Math.floor(Math.random() * moneySymbols.length)];
+      document.body.appendChild(money);
+
+      setTimeout(() => {
+        money.remove();
+      }, 7000);
+    }
+    setInterval(createMoney, 300);
   </script>
+
 </body>
 </html>
